fixed positioning of card columns that were covering the section title

--- a/public/app.css
+++ b/public/app.css
@@ -1,4 +1,4 @@
 [class*="col-"] {
-  padding-bottom: -6rem !important;
+  /* padding-bottom: -6rem !important; */
   margin-bottom: -6rem !important;
 }
